--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "firebase": "^9.9.3",
     "firebase-tools": "^11.8.0",
+    "lottie-web": "^5.9.6",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
