--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
-    "firebase": "^9.9.3",
-    "firebase-tools": "^11.8.0",
+    "firebase": "^9.10.0",
+    "firebase-tools": "^11.9.0",
     "lottie-web": "^5.9.6",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-auth-hooks": "^1.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-speech-kit": "^3.0.1"
   },
   "devDependencies": {
